# atlassian-unified-mcp

./: README.md  install.py  pyproject.toml  run.py
atlassian_unified_mcp/: __init__.py  server.py
