[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlassian-unified-mcp"
version = "1.0.0"
description = "Birlesik Jira + Confluence + Bitbucket MCP sunucusu"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
atlassian-mcp = "atlassian_unified_mcp.server:main"
